// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip correctly positions tooltip content based on position prop 1`] = `
.c1 {
  background-color: black;
  border-radius: 6px;
  color: rgb(255,255,255);
  font-family: Nunito,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-size: 11px;
  opacity: 0;
  padding: 10px;
  position: absolute;
  text-align: center;
  -webkit-transition: opacity 1s;
  transition: opacity 1s;
  visibility: hidden;
  white-space: normal;
  width: 160px;
  z-index: 1070;
  bottom: 150%;
  left: 50%;
  margin-left: -80px;
}

.c0 {
  border-bottom: 1px dotted rgb(84,196,106);
  cursor: help;
  display: inline-block;
  position: relative;
}

.c0:hover > :last-child {
  opacity: 0.8;
  visibility: visible;
  z-index: 1070;
}

<div
  class="c0"
>
  Hover over me
  <div
    class="c1"
  >
    Hello!
  </div>
</div>
`;

exports[`Tooltip correctly positions tooltip content based on position prop 2`] = `
.c1 {
  background-color: black;
  border-radius: 6px;
  color: rgb(255,255,255);
  font-family: Nunito,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-size: 11px;
  opacity: 0;
  padding: 10px;
  position: absolute;
  text-align: center;
  -webkit-transition: opacity 1s;
  transition: opacity 1s;
  visibility: hidden;
  white-space: normal;
  width: 160px;
  z-index: 1070;
  top: 150%;
  left: 50%;
  margin-left: -80px;
}

.c0 {
  border-bottom: 1px dotted rgb(84,196,106);
  cursor: help;
  display: inline-block;
  position: relative;
}

.c0:hover > :last-child {
  opacity: 0.8;
  visibility: visible;
  z-index: 1070;
}

<div
  class="c0"
>
  Hover over me
  <div
    class="c1"
  >
    Hello!
  </div>
</div>
`;

exports[`Tooltip correctly positions tooltip content based on position prop 3`] = `
.c1 {
  background-color: black;
  border-radius: 6px;
  color: rgb(255,255,255);
  font-family: Nunito,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-size: 11px;
  opacity: 0;
  padding: 10px;
  position: absolute;
  text-align: center;
  -webkit-transition: opacity 1s;
  transition: opacity 1s;
  visibility: hidden;
  white-space: normal;
  width: 160px;
  z-index: 1070;
  right: 120%;
  top: -5px;
}

.c0 {
  border-bottom: 1px dotted rgb(84,196,106);
  cursor: help;
  display: inline-block;
  position: relative;
}

.c0:hover > :last-child {
  opacity: 0.8;
  visibility: visible;
  z-index: 1070;
}

<div
  class="c0"
>
  Hover over me
  <div
    class="c1"
  >
    Hello!
  </div>
</div>
`;

exports[`Tooltip correctly positions tooltip content based on position prop 4`] = `
.c1 {
  background-color: black;
  border-radius: 6px;
  color: rgb(255,255,255);
  font-family: Nunito,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-size: 11px;
  opacity: 0;
  padding: 10px;
  position: absolute;
  text-align: center;
  -webkit-transition: opacity 1s;
  transition: opacity 1s;
  visibility: hidden;
  white-space: normal;
  width: 160px;
  z-index: 1070;
  top: -5px;
  left: 120%;
}

.c0 {
  border-bottom: 1px dotted rgb(84,196,106);
  cursor: help;
  display: inline-block;
  position: relative;
}

.c0:hover > :last-child {
  opacity: 0.8;
  visibility: visible;
  z-index: 1070;
}

<div
  class="c0"
>
  Hover over me
  <div
    class="c1"
  >
    Hello!
  </div>
</div>
`;
